# zora

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: commonvoice.ipynb  development.ipynb
src/zoraspeech/: listener.py
src/zoraspeech/architectures/cnn/: cnn.py
src/zoraspeech/architectures/speech_transformer/: dataset.py
src/zoraspeech/interpreters/cnn/: layer_visualizations.py
src/zoraspeech/learners/: cnn_learner.py
src/zoraspeech/listener/: listener.py
src/zoraspeech/utils/: data_augmentation.py  visualization.py
src/zoraspeech/weights/: weights_go_here.md
