[project]
name = "zoraspeech"
version = "0.1.0"
description = "An interpretable machine listening library supporting voice and speech"
authors = [
    { name = "Johann Diedrick", email = "johann@zoraspeech.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["speech recognition", "ASR", "ML", "interpretability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=1.0",
    "jupyter>=1.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zoraspeech"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[project.urls]
Homepage = "https://github.com/zoraspeech/zoraspeech"
Documentation = "https://zoraspeech.readthedocs.io"
Repository = "https://github.com/zoraspeech/zoraspeech.git"